--- a/Dissertacao_Marcelo_Goncalves/dissertacao.bib
+++ b/Dissertacao_Marcelo_Goncalves/dissertacao.bib
@@ -240,6 +240,23 @@ year = {2010}
   year={2013},
   journal={31o Simp{\'o}sio Brasileiro de Redes de Computadores e Sistemas Distribu{\'i}dos – SBRC 2013 },
 }
+@book{huttermann2012devops,
+  title={DevOps for developers},
+  author={H{\"u}ttermann, Michael},
+  volume={1},
+  year={2012},
+  publisher={Springer}
+}
+@article{avetisyan2010open,
+  title={Open cirrus: A global cloud computing testbed},
+  author={Avetisyan, Arutyun I and Campbell, Roy and Gupta, Indranil and Heath, Michael T and Ko, Steven Y and Ganger, Gregory R and Kozuch, Michael A and O'Hallaron, David and Kunze, Marcel and Kwan, Thomas T and others},
+  journal={Computer},
+  volume={43},
+  number={4},
+  pages={35--43},
+  year={2010},
+  publisher={Institute of Electrical and Electronics Engineers, Inc., 3 Park Avenue, 17 th Fl New York NY 10016-5997 United States}
+}
 @inproceedings{malkowski2010cloudxplor,
   title={CloudXplor: A tool for configuration planning in clouds based on empirical data},
   author={Malkowski, S. and Hedwig, M. and Jayasinghe, D. and Pu, C. and Neumann, D.},
