--- a/Dissertacao_Marcelo_Goncalves/capitulos/capacitor.tex
+++ b/Dissertacao_Marcelo_Goncalves/capitulos/capacitor.tex
@@ -337,7 +337,7 @@ quais são as Configurações Candidatas e Rejeitadas.
   \end{center}
 \end{figure}
 
-Como podemos ver na Figura~\ref{fig:depspace_real}, o Espaço de Implantação é 
+Como é possível ver na Figura~\ref{fig:depspace_real}, o Espaço de Implantação é 
 representado internamente por um grafo bi-direcionado onde os nós são as 
 Configurações. Arestas existem entre nós onde sejam verdadeiras as relações 
 ``maior que'' e ``menor que'', conforme as definições da 
