Atualizando capitulo de relacionados

--- a/Dissertacao_Marcelo_Goncalves/capitulos/relacionados.tex
+++ b/Dissertacao_Marcelo_Goncalves/capitulos/relacionados.tex
@@ -2,11 +2,37 @@
 % ----------------------------------------------------------
 Apresentamos  neste capítulo alguns trabalhos cujos objetivos estejam alinhados 
 com a ideia da avaliação de desempenho de aplicações executadas em ambientes de
-computação em nuvem. Fazemos então uma análise de seus objetivos e resultados 
-alcançados, bem como traçamos as semelhanças com este trabalho, avaliando quais são
-nossas contribuições diferenciais.
+computação em nuvem. Esses trabalhos estão agrupados de acordo com a abordagem utilizada para a realização da avaliação de desempenho. São duas abordagens, a primeira é a abordagem preditiva, nesta, os trabalhos não executam diretamente a aplicação alvo no ambiente onde se deseja implantá-la. Já a segunda abordagem é a empírica, nesta as aplicações alvo são implantadas na nuvem e então submetidas a testes de carga. 
 
-\section{Prediction Tools}
+Para apoiar a análise crítica de cada trabalho e suas abordagens, definimos um conjunto de critérios a partir dos quais poderemos tanto descrever, quanto comparar as soluções existentes de apoio a avaliação de desempenho do ponto de vista do usuário. Seguem os critérios:
+
+\begin{enumerate}
+  \item Completude da solução
+  \begin{enumerate}
+    \item Definição da aplicação --- flexibilidade da solução para
+    definir a aplicação a ser avaliada;
+    \item Definição da demanda --- flexibilidade da solução para
+    definir os níveis de carga de trabalho sobre os quais a aplicação será
+    submetida;
+	\item Definição dos recursos da nuvem --- flexibilidade da solução para
+	definir as configurações de recursos do provedor sobre as quais a aplicação
+	será executada;
+	\item Definição do acordo de nível de serviço (SLA) --- flexibilidade da
+	solução para definir o SLA desejado.
+  \end{enumerate}
+  \item Efetividade da solução  
+  \begin{enumerate}
+    \item Eficiência --- tempo e custo necessários para a solução resolver o
+    problema;
+    \item Acurácia --- confiabilidade das respostas oferecidas pela solução;
+	\item Complexidade --- grau de complexidade/esforço exigido do usuário da
+	solução.
+  \end{enumerate}
+\end{enumerate}
+
+Cada abordagem será apresentada em uma subseção, bem como os diversos trabalhos da área que serão resumidos separadamente. Ao final da subseção, será apresentada uma análise crítica que será baseada nos critérios descritos acima.
+
+\section{Ferramentas com Abordagem Preditiva}
 \subsection{Cloud Harmony}
 O projeto {\em CloudHarmony}, cujo
 objetivo é ``tornar-se a principal fonte independente, imparcial e útil de
@@ -101,17 +127,25 @@ escolha dos provedores e recursos mais apropriados para uma determinada aplicaç
 ferramenta não oferece suporte à execução de novos cenários de avaliação na nuvem, estando limitada àqueles previamente definidos para os respectivos {\em bechmarks}.
 
 \subsection{CloudAdvisor}
-\cite{jung2013cloudadvisor}
+O trabalho apresentado em~\cite{jung2013cloudadvisor} ``introduz uma nova plataforma de recomendação de nuvem, chamada {\em CloudAdvisor}''. Essa plataforma destina-se a auxiliar o seu usuário na tarefa de capturar as implicações monetárias e financeiras das configurções de implantação das suas aplicações. Para recomendar a configuração, a platforma recebe como entrada parâmetros de configuração de alto nível como, orçamento, expectativa de performance e economia de energia, os quais estão limitados a uma escala discreta que vai de 0 até 10, onde 0 significa baixa influência e 10 significa alta influência. Uma vez informados os parâmetros de configuração, o {\em CloudAdvisor} irá caracterizar a performance da aplicação alvo em termos de uso dos recursos computacionais e em seguida executará o {\em benchmark} {\em CloudMeter},~\cite{jung2013cloudadvisor}, nas nuvens candidatas, a fim de caracterizar a performance dos recursos dessas nuvens.
+
+Para ilustrar o uso do {\em CloudAdvisor}, os autores implantaram a solução em servidores locais e em três provedores de nuvem pública, foram eles: Windows Azure, Rackspace, and Amazon EC2. Como resultado, foi observado que a taxa de erro da configuração para uma determinada carga foi de 10~\%. No entanto, quando o usuário do ambiente escolhe parâmetros de configuração extremos (por exemplo, configurar o máximo de orçamento, de economia de energia e de nível de performance), essa taxa de erro elevou para 18~\%.
+
+Os autores concluem que o usuário da solução pode explorar diversas opções de configuração da sua aplicação na nuvem utilizando uma interface amigável e sem a necessidade de informar detalhes específicos de configuração. Além disso, mostraram que é possível utilizar uma técnica de caracterização de performance, para uma dada carga, baseada na execução de {\em benchmarks} em nuvens candidatas.
 
 \subsection{CDOSim}
-\cite{fittkau2012cdosim}
+Uma solução para o desafio da escolha da configuração de implantação de uma aplicação na nuvem foi apresentada em~\cite{fittkau2012cdosim} com o nome de \textit{CDOSim}. Essa ferramenta auxilia o usuário no processo de escolha do que os autores chamaram de opção de implantação na nuvem, do inglês \textit{Cloud Deployment Option} (CDO). Uma vez que a análise manual das ``potenciais CDOs é intratável, custosa e consome tempo, devido à heterogeneidade dos ambientes de nuvem'',~\cite{fittkau2012cdosim}. Para a escolha das CDOs, são realizadas simulações que se baseiam no custo e nas propriedades de performance de cada CDO. Como requisito para a utilização de uma CDO nas simulações, é preciso caracterizar as suas propriedades de performance em termos de \textit{mega integer plus instructions per second} (MIPIPS)~\cite{fittkau2012cdosim}, essa caracterização é realizada através da execução de um \textit{benchmark} cujo código é gerado para cada linguagem de programação utilizada pela aplicação alvo. Esta, por sua vez, deve passar por um processo de engenharia reversa para modelos KDM, que é descrito em~\cite{perez2011knowledge}, para que o simulator consiga escolher a opção de configuração mais adequada.
+
+Para validar o \textit{benchmark} MIPIPS, os resultados da simulação em comparação com dados reais e a predição da performance de um provedor de nuvem com base nos dados de outro provedor de nuvem, os autores conduziram uma série de experimentos em dois ambientes de nuvem, uma pública a Amazon EC2 e outra privada. Na nuvem pública foi evidenciado que os valores de MIPIPS dependem da região onde o \textit{benchmark} foi realizado e da carga sobre a máquina física que hospeda a vitual. Já na comparação dos resultados da simulação com os dados reais, os autores mostraram que a taxa de error da utilização de CPU simulada com a utilização de CPU medida chegou a 30,86~\%, contudo, como a taxa de erro médio global foi abaixo de 22,75~\%, abaixo do threshold estabelecido pelos autores que era de 30~\%. Já a predição da performance de uma instância da Amazon EC2 a partir da performance de uma instância da nuvem privada gerou um 15,76~\% como taxa de erro global.
+
+Finalmente, os autores concluem que a simulação pode auxiliar no processo de escolha da opção de implantação com maior performance e menor custo e que os resultados da simulação são razoavelmente próximos dos experimentos realizados dos valores reais.
 
 \subsection{CloudProphet}
-Em \cite{li2011cloudprophet} os autores apresentam o CloudProphet, um sistema de
+Em \cite{li2011cloudprophet} os autores apresentam o \textit{CloudProphet}, um sistema de
 predição de desempenho de aplicações em ambiente de nuvem computacional baseado 
 na metodologia de ``rastrear e reproduzir'' (\textit{trace and replay}).
 
-O CloudProphet não testa a aplicação do cliente de fato no ambiente de nuvem. De
+O \textit{CloudProphet} não testa a aplicação do cliente de fato no ambiente de nuvem. De
 modo contrário, ele injeta na implantação original da aplicação um módulo que 
 registra um rastreamento detalhado dos eventos de utilização de recursos de CPU,
 armazenamento e rede em cada componente da aplicação durante um período de 
@@ -126,7 +160,7 @@ rastreamento. Essa reprodução consiste fazer com que o ambiente de nuvem
 computacional que se deseja avaliar execute as transações representadas nos dados
 do rastreamento a partir de requisições que partem de clientes simulados.
    
-O objetivo do CloudBench, segundo os autores é eliminar o custo e o trabalho 
+O objetivo do \textit{CloudBench}, segundo os autores é eliminar o custo e o trabalho 
 envolvidos na migração da aplicação real para a nuvem para a execução de testes 
 antes que seja de fato tomada a decisão em favor dessa migração.
 
@@ -137,7 +171,11 @@ migração pode ser bastante trabalhosa conforme o número e a diversidade dos
 componentes da aplicação, que podem acarretar dificuldades de configuração e
 compatibilidade no novo ambiente.
 
-\section{Trial-And-Test Tools}
+\section{Ferramentas com Abordagem Empírica}
+As ferramentas que serão apresentadas nesta seção têm em comum o fato de utilizarem como aplicação alvo a prória aplicação que se deseja implantar na nuvem. Portanto, é preciso inicialmente realizar uma implantação na nuvem para que seja dado início ao processo de análise de desempenho. Por isso, cada ferramenta oferece um mecanismo para que o seu usuário possa definir como a aplicação deve ser implantada e configurada. Além da definição da aplicação e dos recursos da nuvem que serão utilizados, essas ferramentas também permitem que sejam definidas a demanda que será imposta a cada aplicação e o acordo de nível de serviço. Dessa forma, é possível definir, por exemplo, o número de usuários simultâneos e o tempo de resposta esperado para uma transação.
+
+Uma vez que que as ferramentas que realizam a abordagem empírica possibilitam ao usuário muita liberdade na definição da aplicação, demanda, recurso da nuvem e SLA, essas soluções têm o mais alto grau de completude. Além disso, como faz-se uso da própria aplicação alvo para a avaliação de desempenho, a acurácia dos resultados apresentados pelas ferramentas é a mais elevada. A seguir, apresentaremos quatro trabalhos que se destacam na avaliação de desempenho de aplicações na nuvem usando a abordagem empírica, são eles:~\cite{jayasinghe2012},~\cite{silva2013cloudbench},~\cite{cunhacloud},~\cite{scheuner2014cloud}.
+
 \subsection{Expertus}
 Devido à complexidade e às implicações da escolha da configuração para a implantação de uma aplicação na nuvem, em~\cite{jayasinghe2012} os autores apresentam o \textit{Expertus}, que é descrito como ``um framework flexível de geração de código para automatizar testes de performance de aplicações distribuídas em nuvem de infraestrutura''. Essa geração automática de código é realizada a partir de {\em templates} especificados na forma de documentos XML~\cite{jayasinghe2012}. Os templates utilizados nas avaliações de desempenho devem ser escritos pelo usuário e servem de entrada para o ambiente, que realiza diversas transformações nessa entrada até a forma de \textit{shell scripts}. Esses \textit{scripts}, por fim, possuem os comandos para a configuração da avaliação de desempenho na aplicação alvo.
 
@@ -146,23 +184,14 @@ Como demonstração da usabilidade da ferramenta, os autores apresentaram em~\ci
 Dessa forma, pode-se concluir que a ferramenta apresentada minimiza a ocorrência de falhas humanas na avaliação de desempenho de uma aplicação implantada em diversos nós. Além disso, os mesmo experimentos podem ser repetidos em diferentes provedores de nuvem pública. De modo que mais cenários de implantação podem ser considerados para a escolha do mais adequado para a aplicação.
 
 \subsection{CloudBench}
-\cite{silva2013cloudbench} descrevem o CloudBench como um arcabouço para 
-automação dos testes e avaliação do desempenho de ambientes de nuvem computacional 
-sob o modelo IaaS. CloudBench prevê métricas que dizem respeito não só à aplicação,
-mas também ao provedor, como latência de provisionamento, bem como a execução dos 
-testes e a coleta de dados relativos às métricas de desempenho observadas, através 
-da abstração de experimentos, aplicações e máquinas virtuais.   
+\cite{silva2013cloudbench} descreve o \textit{CloudBench} como um arcabouço para automação da avaliação de desempenho de ambientes de nuvem computacional sob o modelo IaaS. As abstrações apresentadas neste trabalho permitem que um experimento seja especificado através de uma lista de diretivas as quais descrevem os itens que compõem o experimento. São exemplos desses itens, objetos como a aplicação alvo, as instâncias de máquinas virtuais utilizadas, e as métricas de desempenho que são tanto relativas à aplicação alvo, quanto ao serviço do provedor de nuvem (por exemplo, latência de provisionamento).
+%Para a análise dos resultados, o ambiente coleta dados relativos às métricas de desempenho observadas, através %da abstração de experimentos, aplicações e máquinas virtuais.
+%Além disso, o ambiente prevê métricas que dizem respeito não só à aplicação, mas também ao provedor, como latência de provisionamento.
+%, bem como a execução dos 
+%testes e a coleta de dados relativos às métricas de desempenho observadas, através 
+%da abstração de experimentos, aplicações e máquinas virtuais.   
 
-As abstrações criadas pelo CloudBench permitem que um experimento seja 
-especificado através de uma lista de diretivas que descrevem os itens
-que compõem o experimento, definindo objetos como a aplicação e as instâncias de 
-máquinas virtuais utilizadas.
-
-CloudBench faz a implantação automática da aplicação a ser executada para
-efeito de testes, desde a criação da máquina virtual no ambiente até a coleta dos
-dados de desempenho e desligamento das máquinas, com suporte a diversos provedores.
-
-Essas características fazem do CloudBench uma ferramenta muito poderosa para a
+Para a realização dos experimentos, o \textit{CloudBench} faz a implantação automática da aplicação a ser executada para efeito de testes. Portanto, o acompanhamento é realizado desde a criação da máquina virtual no ambiente até a coleta dos dados de desempenho e desligamento das máquinas. Essas características fazem do CloudBench uma ferramenta muito poderosa para a
 automação de testes e coleta de dados para análise das execuções. Suas ferramentas
 de monitoramento fornecem informações com grandes níveis de detalhamento a respeito
 de cada componente implantado e usado nos testes, proporcionando excelente embasamento
@@ -171,7 +200,7 @@ para a tomada de decisão.
 Entretanto, embora o CloudBench tenha um escopo de solução muito mais amplo, 
 voltado para a avaliação de desempenho tanto da aplicação do cliente como do 
 provisionamento de máquinas pelo provedor, seu alvo no momento da execução de 
-testes está restrito a benchmarks pré-definidos, não permitindo a execução de 
+testes está restrito a \textit{benchmarks} pré-definidos, não permitindo a execução de 
 uma aplicação real no ambiente testado.
 
 %Neste sentido, o arcabouço que propomos com este trabalho se diferencia pelo fato
@@ -195,22 +224,25 @@ Para ilustrar o uso do \textit{Cloud WorkBench}, foi realizado um pequeno experi
 
 Após a análise dos resultados, os autores concluem que o \textit{Cloud WorkBench} suporta a realização de experimentos em nuvens de infraestrutura, e que toda a complexidade da configuração do ambiente pode ficar codificada. O que diminui a ocorrência de erros decorrentes de eventuais intervenções manuais.
 
-\section{Outros Trabalhos e Considerações}
+\subsection{Análise Técnica da Metodologia}
+Apesar das soluções de abordagem empírica terem destaque no critério da completude, no que diz respeito à efetividade, elas possuem desempenho moderado nos critérios relacionados à eficiência e à complexidade, enquanto que possuem alta acurácia. No que diz respeito à eficiência, essas ferramentas poderiam fazer uso de resultados anteriores para evitar a execução de testes que claramente poderiam ser evitados, por exemplo, em uma situação em uma demanda é submetida à aplicação que está sendo executada em uma máquina virtual com o mais baixo nível de recurso computacional, seria coerente afirmar que essa mesma demanda pode ser atendida por máquinas com perfis computacionais mais robustos. Já no que diz respeito à complexidade, cada trabalho faz uso de uma estratégia particular para a definição da aplicação. Dessa forma, o usuário do ambiente precisa se adaptar à sintaxe de cada solução, e eventualmente, configurar imagens contendo os componentes da aplicação que será avaliada.
 
-******
+%\section{Outros Trabalhos e Considerações}
 
-\textbf{Caracteristicas gerais do Cloud Capacitor}
+%******
 
-Foco em minimização dos custos de execução dos testes
+%\textbf{Caracteristicas gerais do Cloud Capacitor}
 
-Proposta de análise do impacto da escalabilidade horizontal e/ou vertical nos 
-resultados dos testes
+%Foco em minimização dos custos de execução dos testes
 
-Julgamento de qual tipo de máquina apresenta melhor custo x desempenho para cada
-faixa de workload
+%Proposta de análise do impacto da escalabilidade horizontal e/ou vertical nos
+% resultados dos testes
 
-Flexibilidade de implementação da lógica de avaliação através do arcabouço de
-heurísticas
+%Julgamento de qual tipo de máquina apresenta melhor custo x desempenho para
+% cadafaixa de workload
 
-******
+%Flexibilidade de implementação da lógica de avaliação através do arcabouço
+% deheurísticas
+
+%******
 
