--- a/Dissertacao_Marcelo_Goncalves/dissertacao.bib
+++ b/Dissertacao_Marcelo_Goncalves/dissertacao.bib
@@ -247,6 +247,16 @@ year = {2010}
   year={2012},
   publisher={Springer}
 }
+@article{perez2011knowledge,
+  title={Knowledge Discovery Metamodel-ISO/IEC 19506: A standard to modernize legacy systems},
+  author={P{\'e}rez-Castillo, Ricardo and De Guzman, Ignacio Garcia-Rodriguez and Piattini, Mario},
+  journal={Computer Standards \& Interfaces},
+  volume={33},
+  number={6},
+  pages={519--532},
+  year={2011},
+  publisher={Elsevier}
+}
 @article{avetisyan2010open,
   title={Open cirrus: A global cloud computing testbed},
   author={Avetisyan, Arutyun I and Campbell, Roy and Gupta, Indranil and Heath, Michael T and Ko, Steven Y and Ganger, Gregory R and Kozuch, Michael A and O'Hallaron, David and Kunze, Marcel and Kwan, Thomas T and others},
